src/test/ui/trait-method-private.stderr
error[E0624]: method `method` is private
  --> $DIR/trait-method-private.rs:29:9
   |
29 |     foo.method();
   |         ^^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the following trait is implemented but not in scope, perhaps add a `use` for it:
           candidate #1: `use inner::Bar;`

error: aborting due to previous error

